--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "build": "webpack",
     "start": "node public/bundle.cjs",
     "start:dev": "ts-node-dev src",
@@ -19,7 +19,9 @@
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
+    "jest": "^29.7.0",
     "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
