--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "allowImportingTsExtensions": false
   },
   "ts-node": {
     "moduleTypes": {
